--- a/src/main/resources/templates/dataError.html
+++ b/src/main/resources/templates/dataError.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>
-    <span th:text="${incorrectData}"></span>
+    <span th:text="${message}"></span>
     <form th:action="${path}" method="get">
         <br>
         <input type="submit" value="Попробовать снова">
