--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -7,7 +7,7 @@
 <body>
 <h2>
     <span th:text="${stage}"></span>
-    <form action="/mainGame" method="post">
+    <form th:action="@{/mainGame}" method="post">
         <label>
             <input type="radio" name="nextStage" value="next">
         </label> <span th:text="${firstAnswer}"></span>
