--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,7 @@
     <title>Registration</title>
 </head>
 <body>
-<form action="registration" method="post">
+<form th:action="@{/registration}" method="post">
     <h2>
         Come up with login : <input name="login">
         <br><br>
