--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -16,7 +16,7 @@
             <input type="radio" name="nextStage" value="lose">
         </label> <span th:text="${secondAnswer}"></span>
         <br>
-        <input type="submit">
+        <input type="submit" th:value="#{next}">
     </form>
 </h2>
 </body>
