--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8">
     <title>UserPage</title>
     <style>
-        .form-container {
-            position: relative;
-        }
-
-        .submit-button {
+        .character-button {
             position: absolute;
             bottom: 10px;
             right: 10px;
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #30b0a1;
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
         }
 
-        .submit-button:hover {
-            background-color: #2e462e;
+        .character-button:hover {
+            background-color: #145db2;
+        }
+    </style>
+    <style>
+        .logout-button {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            background-color: #f10707;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .logout-button:hover {
+            background-color: #15e115;
         }
     </style>
 </head>
@@ -42,10 +55,11 @@
     <label th:text="#{delete_user}"></label>
     <input type="submit" th:value="#{delete}"/>
 </form>
-<div class="form-container">
-    <form th:action="@{/index}" method="get">
-        <button type="submit" class="submit-button" th:value="#{home}"></button>
-    </form>
-</div>
+<form th:action="@{/characters}" method="get">
+    <input type="submit" class="character-button" th:value="#{characters}">
+</form>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" class="logout-button" th:value="#{logout}"/>
+</form>
 </body>
 </html>
