--- a/src/main/resources/templates/dataError.html
+++ b/src/main/resources/templates/dataError.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title th:text="#{error}"></title>
 </head>
 <body>
 <h2>
