--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title th:text="#{game}"></title>
 </head>
 <body>
 <h2>
