--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Registration</title>
+    <title th:text="#{reg}"></title>
+    <style>
+        .back-button {
+            font-size: 16px;
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            background-color: #867b7b;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .back-button:hover {
+            background-color: #096be5;
+        }
+    </style>
 </head>
 <body>
 <form th:action="@{/registration}" method="post">
     <div>
-        <label th:text="#{come_up_with_login}"></label>
-        <input type="text" name="login">
+        <label for="login" th:text="#{come_up_with_login}"></label>
+        <input id="login" type="text" name="login">
     </div>
     <br>
     <div>
-        <label th:text="#{come_up_with_password}"></label>
-        <input type="text" name="password">
+        <label for="password" th:text="#{come_up_with_password}"></label>
+        <input id="password" type="text" name="password">
     </div>
     <br>
     <input type="submit" th:value="#{sign_up}">
+</form>
+<form th:action="@{/}" method="get">
+    <input type="submit" class="back-button" th:value="#{go_back}">
 </form>
 </body>
 </html>
