--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -120,7 +120,7 @@
         <input type="submit" th:value="#{next_page}">
     </div>
 </form>
-<form th:action="@{/user}" method="get">
+<form th:action="@{/users}" method="get">
     <input type="submit" class="user-button" th:value="#{user_page}">
 </form>
 </body>
